[metadata]
name = hello
version = 0.0.0
author = Andrea
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pytest


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hello = hello.main:print_hi

